Issue #SB-12898 task: sync displays and overflows

--- a/src/assets/styles/base/_displays.scss
+++ b/src/assets/styles/base/_displays.scss
@@ -1,20 +1,21 @@
-.d-inline-block{
+.d-inline-block {
     display: inline-block !important;
 }
-.d-block, .show{
+.d-block,
+.show {
     display: block !important;
 }
-.d-flex{
+.d-flex {
     display: flex !important;
 }
-
 .d-inline-flex {
     display: inline-flex !important;
 }
-.d-inline{
+.d-inline {
     display: inline !important;
 }
-.d-none, .hide{
+.d-none, 
+.hide {
     display: none !important;
 }
 
